# flake8-ado

./: .flake8  LICENSE  README.md  pyproject.toml  settings.py  tox.ini
.github/workflows/: build.yaml  publish.yml
flake8_ado/: ado_client.py  checkers.py  domain.py  plugin.py  scanner.py  validators.py
flake8_aod/: __init__.py  ado_client.py  checker.py  checkers.py  plugin.py  scanner.py  validators.py
tests/: test_checker.py
