[project]
name = "flake8-ado"
version = "1.1"
description = "Flake8 plugin to check comments against AzureDevOps ticket references."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "DanielKusyDev", email = "daniel.kusy97@gmail.com" }
]
keywords = [
    "flake8",
    "aod",
    "azure devops",
    "lint"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "azure-devops>=6.0.0b4",
    "importlib-metadata==4.*",
]

[project.urls]
Homepage = "https://github.com/DanielKusyDev/flake8-ado"
Repository = "https://github.com/DanielKusyDev/flake8-ado"

[project.entry-points."flake8.extension"]
ADO = "flake8_ado:Plugin"

[project.optional-dependencies]
dev = [
    "isort>=5.10.1",
    "black>=22.8.0",
    "flake8-black>=0.3.3",
    "pytest>=7.1.2",
    "pytest-mock>=3.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
